# ICT398-Project-Red

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  StyleReport.py
lib/: CMakeLists.txt
lib/glad/include/glad/: glad.h
lib/glad/src/: glad.c
res/Entity/: Test.json  Test2.json
res/Entity/Demo/: Chair.json  Chair3.json  Classroom.json  Desk.json  Desk3.json  Guy1.json  Scene.json
res/Entity/MainScreen/: Guy1.json  Guy2.json  Scene.json
res/Entity/NPCDemo/: Guy1.json  Scene.json
res/Entity/PhysicsDemo/: Ball.json  Block1.json  Block2.json  Block3.json  Chair.json  Desk.json  Floor.json  Scene.json
res/Entity/PrefabEditor/: Block1.json  Block2.json  Scene.json
res/model/: Classroom.fbx  book.mtl  error.fbx
res/model/Bench/: Bench.mtl
res/model/Board/: Board.mtl
res/model/Chair/: Chair_Low.fbx
res/model/Character/: BlueLight.gltf  BlueLightFemale.gltf  ClothedMan.gltf  GreenDark.gltf  GreenDarkFemale.gltf  GreenLight.gltf  RedLightFemale.gltf
res/model/Classroom/: Classroom.fbx
res/model/Desk/: Desk.fbx  chair_obj.mtl
res/model/PhysicTestObjects/: ball.glb  morgwall.fbx  morgwall.prt  test.mtl
res/prefab/: Ball.json  Bench.json  Block.json  Board.json  Chair.json  Classroom.json  Cube.json  Desk.json  Error.json  Female1.json  Female2.json  Guy1.json  Guy2.json  Guy3.json  Guy4.json  Rock_01.json  Template.json  Tree_01.json  UnitTestBlock.json  book.json  prefablist.json
res/shader/: CollisionShader.fs  CollisionShader.vs  fragshader.fs  lighting_shader.fs  lighting_shader.vs  model_shader.fs  model_shader.vs  react_shader.fs  react_shader.vs  skybox_frag.fv  skybox_vert.vs  vertshader.vs
src/: CMakeLists.txt  main.cpp
src/DataStructures/Model/: Animation.cpp  Animation.hpp  Animator.cpp  Animator.hpp  DataTypes.hpp  Mesh.cpp  Mesh.hpp  Model.cpp  Model.hpp  Overload.hpp  Vertix.hpp  data-types.h  data_types.h
src/DataStructures/NPC/: AI.hpp  Symbols.hpp
src/ECS/: Components.hpp  ECS.cpp  ECS.hpp  Ecs.cpp  Ecs.hpp  Entity.cpp  Entity.hpp
src/ECS/Component/: Agent.hpp  Basic.cpp  Basic.hpp  Board.cpp  Board.hpp  Model.cpp  Model.hpp  NPC.cpp  NPC.hpp  Node.cpp  Node.hpp  Player.hpp
src/ECS/System/: AISystem.cpp  AISystem.hpp  (+4 more)
src/Engine/: Engine.cpp  Engine.hpp  EulerCamera.cpp  EulerCamera.hpp  GLFWEventManager.cpp  GLFWEventManager.h  GLFWInputWrangler.cpp  GLFWInputWrangler.h  GameStack.hpp  InputEnums.h  InputManager.cpp  InputManager.h  RedEventManager.cpp  RedEventManager.hpp  euler_camera.h
src/Game/: BaseState.hpp
(+169 files in other folders)
